--- a/site_files/html/view_modal.html
+++ b/site_files/html/view_modal.html
@@ -1,4 +1,4 @@
-<div id="viewUserModal" class="modal">
+<div id="viewChannelModal" class="modal">
     <div class="modal-content">
         <div class="modal-header">
             <span class="close">&times;</span>
